k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
      - name: demo-api-container
        image: ghcr.io/shibme/demo-api:latest
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
        ports:
        - containerPort: 80
