k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
spec:
  type: LoadBalancer
  ports:
    - port: 8888
      targetPort: 80
  selector:
    app: demo-api
